@@ -275,6 +275,29 @@ class SpecialPage
 	}
 
 	/**
+	 * Check if a given name exist as a special page or as a special page alias
+	 * @param $name string: name of a special page
+	 * @return boolean: true if a special page exists with this name
+	 */
+	static function exists( $name ) {
+		if ( !self::$mListInitialised ) {
+			self::initList();
+		}
+		if( !self::$mAliases ) {
+			self::initAliasList();
+		}
+
+		# Remove special pages inline parameters:
+		$bits = explode( '/', $name );
+		$name = $bits[0];
+
+		return
+			array_key_exists( $name, self::$mList )
+			or array_key_exists( $name, self::$mAliases )
+		;
+	}
+
+	/**
 	 * Find the object with a given name and return it (or NULL)
 	 * @static
 	 * @param string $name
